<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/feedback_ly"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>
    <RelativeLayout
        android:id="@+id/feedback_rl"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="@color/ffffff"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:text="反馈类型"
            android:textSize="16sp"
            android:textColor="@color/c666666"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/feedback_select_tv"
            android:layout_width="wrap_content"
            android:textColor="@color/c666666"
            android:textSize="23sp"
            android:text="@string/next"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/feedback_tv"
            android:layout_width="wrap_content"
            android:textColor="@color/dbdbdb"
            android:textSize="18sp"
            android:text="@string/select_string"
            android:paddingRight="5dp"
            android:layout_toLeftOf="@id/feedback_select_tv"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/feedback_et"
        android:layout_width="match_parent"
        android:background="@color/ffffff"
        android:paddingRight="10dp"
        android:minLines="5"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text=""
        android:hint="请在此处输入留言内容"
        android:gravity="top"
        android:paddingLeft="10dp"
        android:layout_height="110dp" />
    <Button
        android:id="@+id/feedback_btn"
        android:layout_width="match_parent"
        android:text="@string/feedback_string"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/ffffff"
        android:background="@drawable/boder_rounded_6ca8cd_6ca8cd"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="45dp" />
</LinearLayout>